# ZAP-DESK

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cursor/rules/: cpp-standards.mdc  english-only.mdc  project-architecture.mdc  qt-ui-theme.mdc  reconner-python.mdc
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INTEGRATION.md  PHASE2-VALIDATION.md  PHASE3-ARCHITECTURE.md  PHASE4-TESTING.md  PHASE5-UI.md  PHASE6-SECURITY.md  PHASE7-PACKAGING.md  PHASE8-DISTRIBUTION.md  ROADMAP.md  STACK.md  SUBDOMAIN-DISCOVERY.md  ZAP-INSTALL-LINUX.md
packaging/: zap-desk.desktop
packaging/debian/: postinst
packaging/flatpak/: com.zapdesk.ZAPDesk.yml
reconner/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIA-SUBDOMINIOS-PT-BR.md  README.md  SECURITY.md  example-run.sh  install-tools.sh  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
reconner/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
reconner/.github/workflows/: ci.yml
reconner/docs/: contributing.md  installation.md  usage.md
reconner/reconner/: __init__.py  __main__.py  cli.py  parsers.py  progress.py  reporter.py  runner.py  utils.py
reconner/reconner/templates/: report.md.j2
reconner/tests/: __init__.py  test_cli_smoke.py  test_zap_desk_runner.py
reconner/wordlists/: README.md
resources/: app.qrc
resources/themes/: hacker.json
scripts/: build.sh  install-all.sh  install-deps.sh  install-reconner.sh  package-appimage.sh  package-deb.sh  package-flatpak.sh  update-zap.sh  validate-phase2.sh  validate-phase4.sh  validate-phase7.sh  validate-phase8.sh  zap-launch.sh
src/: main.cpp
src/application/usecases/: FeedZapUseCase.cpp  FeedZapUseCase.hpp  RunFullPipelineUseCase.cpp  RunFullPipelineUseCase.hpp  StartReconUseCase.cpp  StartReconUseCase.hpp  StartZapScanUseCase.cpp  StartZapScanUseCase.hpp
src/components/: AppTheme.cpp  AppTheme.hpp  CrtOverlay.cpp  CrtOverlay.hpp  FindingsTable.cpp  FindingsTable.hpp  HackerTheme.cpp  HackerTheme.hpp  KdeTheme.cpp  KdeTheme.hpp  LogConsole.cpp  LogConsole.hpp  ReconSummaryPanel.cpp  ReconSummaryPanel.hpp  ScanHistorySidebar.cpp  ScanHistorySidebar.hpp  ScanProgressBar.cpp  ScanProgressBar.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StatusBanner.cpp  StatusBanner.hpp  UiKit.cpp  UiKit.hpp
src/config/: AppConfig.cpp  AppConfig.hpp
src/core/: ZapClient.cpp  ZapClient.hpp  ZapDaemon.cpp  ZapDaemon.hpp
src/domain/alert/: SecurityAlert.cpp  SecurityAlert.hpp
src/domain/ports/: ReconPorts.hpp  ZapPorts.hpp
src/domain/recon/: ReconTypes.hpp
src/domain/scan/: Scan.cpp  Scan.hpp  ScanStatus.hpp
src/domain/value_objects/: RiskLevel.cpp  RiskLevel.hpp  ScanId.cpp  ScanId.hpp  TargetUrl.cpp  TargetUrl.hpp
src/infrastructure/recon/: JsonReconSummaryReader.cpp  JsonReconSummaryReader.hpp  QtPreflightGateway.cpp  QtPreflightGateway.hpp  QtReconGateway.cpp  QtReconGateway.hpp
src/infrastructure/zap/: QtZapGateway.cpp  QtZapGateway.hpp
src/presentation/: ApplicationFacade.cpp  ApplicationFacade.hpp
src/security/: AuditLogger.cpp  AuditLogger.hpp  CredentialStore.cpp  CredentialStore.hpp  KeyringBackend.cpp  KeyringBackend.hpp  ReconRateLimiter.cpp  ReconRateLimiter.hpp
src/services/: ReconBridge.cpp  ReconBridge.hpp  ReconPreflight.cpp  ReconPreflight.hpp  ReconRunner.cpp  ReconRunner.hpp  ReconSummary.cpp  ReconSummary.hpp  ZapUpdater.cpp  ZapUpdater.hpp
src/shared/errors/: AppError.cpp  AppError.hpp  DomainError.hpp
src/shared/result/: Result.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp
tests/fixtures/: summary-sample.json
tests/helpers/: FixturePaths.hpp
tests/integration/: test_zap_api.cpp
tests/unit/: test_audit_logger.cpp  test_credential_store.cpp  test_domain.cpp  test_recon_rate_limiter.cpp  test_risk_level.cpp  test_scan_entity.cpp  test_summary_reader.cpp  test_target_url.cpp  test_usecases.cpp  test_zap_client_auth.cpp
